test/Fail/Issue1295.err
Issue1295.agda:5.1-22: error: [RepeatedVariablesInPattern]
Repeated variables in pattern: x
when scope checking the declaration
  pattern foo x = x , x
